{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 44,
  "lineage": "04838624-1712-fd68-4776-b8ec4d9076ec",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dfe66b53-7ab5-4f19-8786-668ac367b573/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/ask_nsg",
            "location": "uksouth",
            "name": "ask_nsg",
            "resource_group_name": "networking-resource-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.network_pro"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/dfe66b53-7ab5-4f19-8786-668ac367b573/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/ask_nsg/securityRules/ask_nsg_rulel",
            "name": "ask_nsg_rulel",
            "network_security_group_name": "ask_nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "196.188.224.232",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.nsg",
            "module.networking.azurerm_resource_group.network_pro"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/dfe66b53-7ab5-4f19-8786-668ac367b573/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/ask_nsg/securityRules/my_ssh_rule",
            "name": "my_ssh_rule",
            "network_security_group_name": "ask_nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "196.188.224.232",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.nsg",
            "module.networking.azurerm_resource_group.network_pro"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ask_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dfe66b53-7ab5-4f19-8786-668ac367b573/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/ask-vnet/subnets/control_plane_subnet_name",
            "name": "control_plane_subnet_name",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "ask-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.network_pro",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ask_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dfe66b53-7ab5-4f19-8786-668ac367b573/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/ask-vnet/subnets/worker_node_subnet_name",
            "name": "worker_node_subnet_name",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "ask-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.network_pro",
            "module.networking.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "713e51f3-a07f-494b-9fd5-b559027c7d9c",
            "id": "/subscriptions/dfe66b53-7ab5-4f19-8786-668ac367b573/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/ask-vnet",
            "location": "uksouth",
            "name": "ask-vnet",
            "resource_group_name": "networking-resource-group"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.network_pro"
          ]
        }
      ]
    }
  ]
}